# yeniversity

./: .gitignore
school2/: Cargo.toml  PROGRESS.md  README.md
school2/phase-00-mathematical-maturity/: Cargo.toml  README.md
school2/phase-00-mathematical-maturity/exercises/: 01-logic-exercises.md  02-logical-equivalence.md  03-quantifiers.md  04-proof-techniques.md  05-mathematical-induction.md  05b-proof-methods-completion.md  05c-structural-induction.md  06-set-theory.md  07-relations.md  08-functions.md  09-cardinality.md
school2/phase-00-mathematical-maturity/notes/: 01-propositional-logic.md  02-logical-equivalence.md  03-quantifiers.md  04-proof-techniques.md  07-relations.md  (+10 more)
school2/phase-01-core-mathematics/: Cargo.toml  README.md
school2/phase-02-classical-physics/: Cargo.toml  README.md
school2/phase-03-chemistry-materials/: Cargo.toml  README.md
school2/phase-04-electronics-hardware/: Cargo.toml  README.md
school2/phase-05-control-theory/: Cargo.toml  README.md
school2/phase-06-robotics/: Cargo.toml  README.md
school2/phase-07-quantum-mechanics/: Cargo.toml  README.md
school2/phase-08-ai-ml/: Cargo.toml  README.md
school2/phase-09-aerodynamics-fluid-dynamics/: Cargo.toml  README.md
school2/phase-10-structural-mechanics/: Cargo.toml  README.md
school2/phase-11-propulsion/: Cargo.toml  README.md
school2/phase-12-optics-imaging/: Cargo.toml  README.md
school2/phase-13-semiconductor-fabrication/: Cargo.toml  README.md
school2/phase-14-vlsi-design/: Cargo.toml  README.md
school2/phase-15-systems-engineering/: Cargo.toml  README.md
(+114 files in other folders)
